tests/agl/rejections/type/ctor_positional_call.agl
record R
  *
  x: int
def f() -> int = 1
let r = R(f())
print r.x
